# microservice-madness

./: .gitignore  Cargo.toml  README.md  justfile
broker/: Cargo.toml
directory/: Cargo.toml
directory/src/services/: broker.rs  mod.rs  poc_service.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: buzz.rs  fizz.rs  lib.rs  logger.rs  math.rs  number.rs  stateful.rs  util.rs
libsvc/: Cargo.toml
libsvc/src/: broker.rs  lib.rs
libsvc_codegen/: Cargo.toml
libsvc_codegen/src/: lib.rs
poc/: Cargo.toml
poc/src/: main.rs
poc_client/: Cargo.toml
poc_service/: Cargo.toml
server_gen/: Cargo.toml
server_gen/src/: main.rs
usvc/: Cargo.toml
