[package]
name = "broker"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "4.0.0-rc6", features = ["serde"] }
tide = "^0.12"
serde_json = "^1.0"
serde = "^1.0"
env_logger = "^0.7"
log = "^0.4"
dotenv = "^0.15"
directory = { path = "../directory", version = "*" }
tokio = { version = "^0.2", features = ["macros", "rt-core"] }