[package]
name = "fizzbuzz"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fizzbuzz"
path = "src/lib.rs"

[dependencies]
serde_json = "^1.0"
serde = "^1.0"
bincode = "^1.3"
log = "^0.4"
env_logger = "^0.7"
tide = "^0.12"
dotenv = "^0.15"
reqwest = { version = "^0.10", features = ["json", "blocking"] }
tokio = { version = "^0.2", features = ["full"] }
libsvc = { path = "../libsvc", version = "*" }
libsvc_codegen = { path = "../libsvc_codegen", version = "*" }
rand = "^0.7"
anyhow = "^1.0"

async-std = { version = "1.6.2", features = ["attributes"] }