[package]
name = "libsvc"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
reqwest = { version = "^0.10", features = ["json", "blocking"] }
thiserror = "^1.0"
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.7"
tide = "^0.12"