[package]
name = "poc_client"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde = "^1.0"
log = "^0.4"
env_logger = "^0.7"
dotenv = "^0.15"
directory = { path = "../directory", version = "*" }
reqwest = { version = "^0.10", features = ["json"] }
tokio = { version = "^0.2", features = ["macros", "rt-core"] }