[package]
name = "server_gen"
version = "0.1.0"
authors = ["Jayson Lennon <jayson@jaysonlennon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^1.0", features = ["full", "extra-traits"] }
quote = "^1.0"
proc-macro2 = "^1.0"
structopt = { version = "^0.3", features = ["paw"] }
paw = "1.0.0"